<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".MainActivity"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="70dp"
            android:padding="10dp"
        />

        <TextView
            android:id="@+id/tvHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_height"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_normal"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            />

        <AutoCompleteTextView
            android:id="@+id/atHeight"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="12dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_normal"
            android:textColor="@color/black"
            android:hint="@string/at_example_height"/>
            />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_weight"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_normal"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            />

        <AutoCompleteTextView
            android:id="@+id/atWeight"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="12dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_normal"
            android:textColor="@color/black"
            android:hint="@string/at_example_weight"/>
        />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/btn_calculate"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_result_imc"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_normal"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginTop="60dp"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/tvResultIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            />

    </LinearLayout>
</layout>